# accessibility-inspector

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  org.kde.accessibilityinspector.desktop  org.kde.accessibilityinspector.metainfo.xml
.reuse/: dep5
po/ar/: accessibilityinspector.po
po/ast/: accessibilityinspector.po
po/az/: accessibilityinspector.po
po/ca/: accessibilityinspector.po
po/ca@valencia/: accessibilityinspector.po
po/cs/: accessibilityinspector.po
po/de/: accessibilityinspector.po
po/en_GB/: accessibilityinspector.po
po/eo/: accessibilityinspector.po
po/es/: accessibilityinspector.po
po/eu/: accessibilityinspector.po
po/fi/: accessibilityinspector.po
po/fr/: accessibilityinspector.po
po/ga/: accessibilityinspector.po
po/gl/: accessibilityinspector.po
po/he/: accessibilityinspector.po
po/hi/: accessibilityinspector.po
po/hu/: accessibilityinspector.po
po/ia/: accessibilityinspector.po
po/it/: accessibilityinspector.po
po/ja/: accessibilityinspector.po
po/ka/: accessibilityinspector.po
po/ko/: accessibilityinspector.po
po/lt/: accessibilityinspector.po
po/lv/: accessibilityinspector.po
po/nl/: accessibilityinspector.po
po/pl/: accessibilityinspector.po
po/pt_BR/: accessibilityinspector.po
po/ro/: accessibilityinspector.po
po/ru/: accessibilityinspector.po
po/sa/: accessibilityinspector.po
po/sk/: accessibilityinspector.po
po/sl/: accessibilityinspector.po
po/sq/: accessibilityinspector.po
po/sv/: accessibilityinspector.po
po/tg/: accessibilityinspector.po
po/tr/: accessibilityinspector.po
po/ug/: accessibilityinspector.po
po/uk/: accessibilityinspector.po
po/zh_CN/: accessibilityinspector.po
po/zh_TW/: accessibilityinspector.po
src/: CMakeLists.txt  Messages.sh  accessibilityinspector.qrc  accessibilityinspectorui.rc  accessibleobjecttreemodel.cpp  accessibleobjecttreemodel.h  accessibleobjecttreeproxymodel.cpp  accessibleobjecttreeproxymodel.h  accessibleproperties.cpp  accessibleproperties.h  accessiblepropertiesmodel.cpp  accessiblepropertiesmodel.h  accessibletree.cpp  accessibletree.h  accessibletreeview.cpp  accessibletreeview.h  accessibletreewidget.cpp  accessibletreewidget.h  accessiblewrapper.cpp  accessiblewrapper.h  clientcachedialog.cpp  clientcachedialog.h  eventview.cpp  eventview.h  eventview.ui  libaccessibilityinspector_private_export.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  propertytreeview.cpp  propertytreeview.h  propertytreewidget.cpp  propertytreewidget.h  uiview.cpp  uiview.h  uiwidget.cpp  uiwidget.h
src/apps/: CMakeLists.txt  main.cpp
src/autotests/: CMakeLists.txt  accessibletreeviewtest.cpp  accessibletreeviewtest.h  accessibletreewidgettest.cpp  accessibletreewidgettest.h  mainwidgettest.cpp  mainwidgettest.h  propertytreeviewtest.cpp  propertytreeviewtest.h
src/model/: accessibleobjecttreemodel.cpp  accessibleobjecttreemodel.h  accessibleobjecttreeproxymodel.cpp  accessibleobjecttreeproxymodel.h  accessiblepropertiesmodel.cpp  accessiblepropertiesmodel.h
